# kubot-software

./: README.md  west.yml
.github/workflows/: build.yml  discord.yml
app/: CMakeLists.txt  prj.conf
app/include/: led_strip_charlieplex.h  main.h  motor.h  rc5.h  sensor_thread.h  start_module_fsm.h  utils.h
app/include/eeprom/: eeprom_helper.h  eeprom_structs.h
app/include/fsm/: robot_main_states.h  start_module_fsm.h  states.h
app/include/rc5/: rc5.h
app/include/robot_sensors/: line_sensor.h  sensor_thread.h
app/src/: eeprom_helper.c  kubot_usb.c  led_strip_charlieplex.c  line_sensor.c  main.c  main.cpp  motor.c  rc5.c  sensor_thread.c  start_module_fsm.c
app/src/eeprom/: eeprom_helper.c
app/src/fsm/: start_module_fsm.c
app/src/fsm/robot_main_states/: main_custom_command.c  main_power_on.c  main_programming.c  main_started.c  main_stopped.c  main_stopped_safe.c
app/src/fsm/states/: state_calibrate_offset.c  state_calibrate_threshold.c  state_calibrate_xtalk.c  state_power_on.c  state_programming.c  state_select_sensor.c  state_started.c  state_stopped.c  state_stopped_safe.c
app/src/motor/: motor.c
app/src/rc5/: rc5.c
app/src/robot_sensors/: line_sensor.c  sensor_thread.c
boards/arm/kubot_f765vi/: Kconfig.board  Kconfig.defconfig  board.cmake  kubot_f765vi.dts  kubot_f765vi.yaml  kubot_f765vi_defconfig
boards/arm/kubot_f765vi/support/: openocd.cfg
drivers/led_strip/: CMakeLists.txt  Kconfig  Kconfig.charlieplex
