cmake_minimum_required(VERSION 3.20.0)
set(BOARD kubot_f765vi)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(app)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

zephyr_library_compile_options(-std=c++17 -g -Wall -Wextra -Wno-unused-variable -fpermissive -Wno-comment)

target_include_directories(app PRIVATE include)
target_sources(app PRIVATE src/main.c)
target_sources(app PRIVATE src/led_strip_charlieplex.c)
target_sources(app PRIVATE src/sensor_thread.c)
target_sources(app PRIVATE src/line_sensor.c)
target_sources(app PRIVATE src/kubot_usb.c)
target_sources(app PRIVATE src/eeprom_helper.c)
