cmake_minimum_required(VERSION 3.20.0)
set(BOARD kubot_f765vi)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(app)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

zephyr_library_compile_options(-std=c++17 -g -Wall -Wextra -Wno-unused-variable -fpermissive -Wno-comment)

target_include_directories(app PRIVATE include)
target_sources(app PRIVATE src/main.c)
target_sources(app PRIVATE src/led_strip_charlieplex.c)
target_sources(app PRIVATE src/robot_sensors/sensor_thread.c)
target_sources(app PRIVATE src/robot_sensors/line_sensor.c)
target_sources(app PRIVATE src/kubot_usb.c)
target_sources(app PRIVATE src/rc5/rc5.c)
target_sources(app PRIVATE src/motor/motor.c)

target_sources(app PRIVATE src/fsm/start_module_fsm.c)
target_sources(app PRIVATE src/fsm/robot_main_states/main_custom_command.c)
target_sources(app PRIVATE src/fsm/robot_main_states/main_power_on.c)
target_sources(app PRIVATE src/fsm/robot_main_states/main_programming.c)
target_sources(app PRIVATE src/fsm/robot_main_states/main_started.c)
target_sources(app PRIVATE src/fsm/robot_main_states/main_stopped_safe.c)
target_sources(app PRIVATE src/fsm/robot_main_states/main_stopped.c)

target_sources(app PRIVATE src/eeprom/eeprom_helper.c)
